<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/blue"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".CalculateActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choice_figure"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/circle"
        android:paddingTop="23dp"
        android:paddingBottom="27dp" />

    <Spinner
        android:id="@+id/spinner_figure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_login"
        android:paddingStart="15dp"
        android:minHeight="50dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/edit_text_bg"
        />

    <EditText
        android:id="@+id/edit_text_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_data"
        android:paddingStart="15dp"
        android:height="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/edit_text_bg"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:height="50dp"
        android:text="@string/calculate"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"
        android:layout_marginHorizontal="15dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />


</LinearLayout>