<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/blue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_geom"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:paddingTop="42dp"
        android:paddingBottom="62dp" />

    <EditText
        android:id="@+id/edit_text_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_login"
        android:paddingStart="15dp"
        android:height="50dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/edit_text_bg"
        />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:paddingStart="15dp"
        android:minHeight="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginHorizontal="30dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/register"
        android:height="50dp"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"
        android:layout_marginHorizontal="15dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        />

</LinearLayout>